--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
 <section class="header">
   <h1>Discover hidden places in the world around you</h1>
-  <p><a href=""/>Download Excursion (Coming soon!)</a></p>
+  <p><a href="#"/>Download Excursion (Coming soon!)</a></p>
 </section>
   </body>
 </html>
