--- a/index.html
+++ b/index.html
@@ -6,9 +6,21 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
-<section class="header">
-  <h1>Discover hidden places in the world around you</h1>
-  <p><a href="#"/>Download Excursion (Coming soon!)</a></p>
-</section>
+    <h1>Discover hidden places in the world around you</h1>
+    <p><a  class="download" href="#"/>Download Excursion (Coming soon!)</a></p>
+    <video autoplay muted loop>
+      <source src="./resources/excursion.mp4" type="video/mp4" alt="Lanscapes Video"/>Your browser does not support the video./>
+    </video>
+    <h2>Your personal travel guide</h2>
+    <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+    <p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="Mountaintop Camping"/>
+    </p>
+    <p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="Phone Icon"/>
+    </p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a class="download" href="#">Download Excursion (Comming soon!)</a></p>
+    <h3 class="copyright">© Excursion</h3>
   </body>
 </html>
