--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <h1>Discover hidden places in the world around you</h1>
     <p><a  class="download" href="#"/>Download Excursion (Coming soon!)</a></p>
     <video autoplay muted loop>
-      <source src="./resources/excursion.mp4" type="video/mp4" alt="Lanscapes Video"/>Your browser does not support the video./>
+      <source src="./resources/videos/excursion.mp4" type="video/mp4" alt="Lanscapes Video"/>Your browser does not support the video./>
     </video>
     <h2>Your personal travel guide</h2>
     <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
     <p>
-      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="Mountaintop Camping"/>
+      <img src="./resources/images/landscape.jpg" alt="Mountaintop Camping"/>
     </p>
     <p>
-      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="Phone Icon"/>
+      <img src="./resources/images/phone.png" alt="Phone Icon"/>
     </p>
     <h2>Coming Soon for iPhone and Android</h2>
     <p><a class="download" href="#">Download Excursion (Comming soon!)</a></p>
