--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p><a  class="download" href="#"/>Download Excursion (Coming soon!)</a></p>
+    <p><a class="download" href="#">Download Excursion (Coming soon!)</a></p>
     <video autoplay muted loop>
-      <source src="./resources/videos/excursion.mp4" type="video/mp4" alt="Lanscapes Video"/>Your browser does not support the video./>
+      <source src="./resources/videos/excursion.mp4" type="video/mp4"/>Your browser does not support the video./>
     </video>
     <h2>Your personal travel guide</h2>
-    <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <p>
       <img src="./resources/images/landscape.jpg" alt="Mountaintop Camping"/>
     </p>
@@ -21,6 +21,8 @@
     </p>
     <h2>Coming Soon for iPhone and Android</h2>
     <p><a class="download" href="#">Download Excursion (Comming soon!)</a></p>
-    <h3 class="copyright">© Excursion</h3>
+  <footer>
+    <p class="copyright">© Excursion</p>
+  </footer>
   </body>
 </html>
