Complete landing page.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Excursion</title>
+    <title>Excursion | Personal Travel Guide</title>
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
